<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1114</width>
    <height>864</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>-6</x>
     <y>-5</y>
     <width>1131</width>
     <height>881</height>
    </rect>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
   <property name="styleSheet">
    <string notr="true">background-image:url(:/newPrefix/C:/Users/akxsh/Desktop/2c933fdd5a3b0a5f8a51a0f44eb0f619.jpg)</string>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap>:/newPrefix/C:/Users/akxsh/Desktop/2c933fdd5a3b0a5f8a51a0f44eb0f619.jpg</pixmap>
   </property>
   <property name="scaledContents">
    <bool>true</bool>
   </property>
  </widget>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>500</x>
     <y>10</y>
     <width>141</width>
     <height>71</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 75 24pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
   <property name="text">
    <string>Sign Up </string>
   </property>
  </widget>
  <widget class="QLabel" name="admission_number">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>190</y>
     <width>229</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>Admission No. :</string>
   </property>
  </widget>
  <widget class="QLabel" name="first_name">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>250</y>
     <width>132</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>First Name:</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="admission_number_2">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>190</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="first_name_2">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>250</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
   <property name="echoMode">
    <enum>QLineEdit::Normal</enum>
   </property>
  </widget>
  <widget class="QPushButton" name="Signup">
   <property name="geometry">
    <rect>
     <x>500</x>
     <y>630</y>
     <width>121</width>
     <height>51</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color:transparent;
font: 75 14pt &quot;MS Shell Dlg 2&quot;;
border-radius:20px;
border-style:solid;
border-color:black;

border-width:4px;
</string>
   </property>
   <property name="text">
    <string>Sign Up</string>
   </property>
  </widget>
  <widget class="QLabel" name="last_name">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>310</y>
     <width>127</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>Last Name:</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="last_name_2">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>310</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="mes_id_2">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>370</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
   <property name="echoMode">
    <enum>QLineEdit::Normal</enum>
   </property>
  </widget>
  <widget class="QLabel" name="mes_id">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>370</y>
     <width>86</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>MES ID:</string>
   </property>
  </widget>
  <widget class="QLabel" name="year">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>430</y>
     <width>59</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>Year:</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="year_2">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>430</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
   <property name="echoMode">
    <enum>QLineEdit::Normal</enum>
   </property>
  </widget>
  <widget class="QPushButton" name="Signup_2">
   <property name="geometry">
    <rect>
     <x>930</x>
     <y>630</y>
     <width>121</width>
     <height>51</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color:transparent;
font: 75 14pt &quot;MS Shell Dlg 2&quot;;
border-radius:20px;
border-style:solid;
border-color:black;

border-width:4px;
</string>
   </property>
   <property name="text">
    <string>Go Back</string>
   </property>
  </widget>
  <widget class="QLabel" name="error">
   <property name="geometry">
    <rect>
     <x>390</x>
     <y>570</y>
     <width>10</width>
     <height>28</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;
color:rgb(255, 0, 0)</string>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QLineEdit" name="password_2">
   <property name="geometry">
    <rect>
     <x>790</x>
     <y>370</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
   <property name="echoMode">
    <enum>QLineEdit::Password</enum>
   </property>
  </widget>
  <widget class="QLineEdit" name="department_2">
   <property name="geometry">
    <rect>
     <x>790</x>
     <y>190</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
  </widget>
  <widget class="QLabel" name="phone_number">
   <property name="geometry">
    <rect>
     <x>590</x>
     <y>310</y>
     <width>177</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>Phone Number:</string>
   </property>
  </widget>
  <widget class="QLabel" name="dob">
   <property name="geometry">
    <rect>
     <x>590</x>
     <y>250</y>
     <width>57</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>DOB:</string>
   </property>
  </widget>
  <widget class="QLabel" name="department">
   <property name="geometry">
    <rect>
     <x>590</x>
     <y>190</y>
     <width>144</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>Department:</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="phone_number_2">
   <property name="geometry">
    <rect>
     <x>790</x>
     <y>310</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
  </widget>
  <widget class="QLabel" name="password">
   <property name="geometry">
    <rect>
     <x>590</x>
     <y>370</y>
     <width>114</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>Password:</string>
   </property>
  </widget>
  <widget class="QDateEdit" name="dob_2">
   <property name="geometry">
    <rect>
     <x>790</x>
     <y>250</y>
     <width>221</width>
     <height>31</height>
    </rect>
   </property>
   <property name="contextMenuPolicy">
    <enum>Qt::PreventContextMenu</enum>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
   <property name="displayFormat">
    <string>dd-MM-yyyy</string>
   </property>
   <property name="calendarPopup">
    <bool>true</bool>
   </property>
  </widget>
  <widget class="QLineEdit" name="confirm_password_2">
   <property name="geometry">
    <rect>
     <x>790</x>
     <y>430</y>
     <width>222</width>
     <height>34</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   </property>
   <property name="echoMode">
    <enum>QLineEdit::Password</enum>
   </property>
  </widget>
  <widget class="QLabel" name="confirm_password">
   <property name="geometry">
    <rect>
     <x>590</x>
     <y>430</y>
     <width>216</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>Confirm Pass:</string>
   </property>
  </widget>
  <widget class="QLabel" name="user_image_2">
   <property name="geometry">
    <rect>
     <x>590</x>
     <y>500</y>
     <width>136</width>
     <height>26</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font: 14pt &quot;Lucida Fax&quot;;</string>
   </property>
   <property name="text">
    <string>User Image:</string>
   </property>
  </widget>
  <widget class="QPushButton" name="user_image">
   <property name="geometry">
    <rect>
     <x>790</x>
     <y>490</y>
     <width>93</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string>image</string>
   </property>
  </widget>
 </widget>
 <resources>
  <include location="test.qrc"/>
 </resources>
 <connections/>
</ui>
